<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:background="@color/grey"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_home_indiq"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:onClick="goBack"
            app:srcCompat="@drawable/ic_close_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="Créer un nouveau contact" />

        <ImageView
            android:id="@+id/image_confirme"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:layout_marginRight="10dp"
            android:onClick="saveContact"
            app:srcCompat="@drawable/ic_done_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        >


        <!-- Name Label -->
        <EditText

            android:id="@+id/input_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/add_name" />
        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText

                android:id="@+id/input_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textCapSentences"
                android:hint="@string/add_prenom" />
        </android.support.design.widget.TextInputLayout>

        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/input_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/add_telephone" />
        </android.support.design.widget.TextInputLayout>



        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/add_email" />
        </android.support.design.widget.TextInputLayout>


        <!-- Naissance Label -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/text_naissance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date de Naissance" />

            <EditText
                android:id="@+id/input_naissance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/add_naissance" />

        </LinearLayout>

        <!-- Relation Label -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/text_sexe"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexe" />

            <Spinner
                android:id="@+id/spinner_sexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sexe_arrays"
                />

        </LinearLayout>

        <!-- Relation Label -->
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liens de :" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp">

            <Spinner
                android:id="@+id/spinner_relation"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <Button
                android:id="@+id/buttonShowCustomDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:layout_weight="1"
                android:text="Choisir" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>